# R-type

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  README.md  compile.bat  compile.sh  install.bat  install.sh
HeadServer/: CMakeLists.txt
HeadServer/lib/: Buffer.cpp  CMakeLists.txt
HeadServer/modules/: AbstractModule.cpp  AbstractModule.hpp  CMakeLists.txt
HeadServer/modules/MainToClients/: CMakeLists.txt  MainToClients.cpp  MainToClients.hpp
HeadServer/modules/MainToSub/: CMakeLists.txt  MainToSub.cpp  MainToSub.hpp
HeadServer/modules/logModule/: CMakeLists.txt  logModule.cpp
HeadServer/network/: CMakeLists.txt
HeadServer/src/: CMakeLists.txt  HeadServer.cpp  HeadServer.hpp  HeadServerServerModule.cpp  HeadServerServerModule.hpp  main.cpp
client/: CMakeLists.txt  Makefile  Rtype  TODO  install.sh  main.cpp
client/assets/: assets_settings.json
client/config/: daltonism_filter.fs  menu_settings.json  window_settings.json
client/installer/: define_env_var.bat  install.sh  install_json.bat  install_raylib.bat  install_vcpkg.bat
client/src/: include.hpp  main.cpp
client/src/elements/guiElements/: gui.cpp  gui.hpp  guiElem.cpp  guiElem.hpp  guiFunction.cpp  guiFunction.hpp
client/src/elements/guiElements/guiElem/: AGuiElem.cpp  AGuiElem.hpp  Elem.hpp  IGuiElem.hpp
client/src/elements/raylibButton/: raylibButton.cpp  raylibButton.hpp
client/src/elements/raylibText/: raylibText.cpp  raylibText.hpp
client/src/fpsCounter/: fpsCounter.cpp  fpsCounter.hpp
client/src/game/: background.cpp  background.hpp  game.cpp  game.hpp
client/src/game/entities/: AEntities.cpp  AEntities.hpp  Entities.cpp  Entities.hpp  EntitiesFactory.cpp  EntitiesFactory.hpp  IEntities.hpp
client/src/jsonParser/: jsonParser.cpp  jsonParser.hpp
client/src/menu/: GuiElementFactory.cpp  GuiElementFactory.hpp  menu.cpp  menu.hpp  menuManager.cpp  menuManager.hpp
client/src/network/: networkElem.cpp  networkElem.hpp
client/src/raygui/: raygui.h
client/src/raylibText/: raylibText.cpp  raylibText.hpp
client/src/raylibWindow/: daltonismFilter.cpp  daltonismFilter.hpp  raylibWindow.cpp  raylibWindow.hpp  utils.cpp  utils.hpp
client2/: CMakeLists.txt  Makefile  main.cpp
client2/src/: Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Menu.cpp  Menu.hpp
installer/: CMakeLists.txt  Makefile  install.cpp  install.hpp  main.cpp
installer/assets/elements/button/: button.cpp  button.hpp
installer/assets/elements/progressBar/: progressBar.cpp  progressBar.hpp
installer/assets/elements/text/: textManager.cpp  textManager.hpp
installer/assets/elements/utils/: utils.cpp  utils.hpp
installer/assets/script/: install.bat  install.sh
server/: CMakeLists.txt
server/client/: CMakeLists.txt
server/config/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  generate module uuid linux  modules.json
server/core/: AbstractModule.cpp  AbstractModule.hpp  CMakeLists.txt
server/game_engine/: CMakeLists.txt
server/game_engine/src/: CMakeLists.txt  main.cpp
server/game_engine/src/entity/: ACharacter.cpp  ACharacter.hpp  AEntity.cpp  AEntity.hpp  CMakeLists.txt  IEntity.hpp
server/game_engine/src/entity/bullet/: Bullet.cpp  Bullet.hpp  CMakeLists.txt
server/game_engine/src/game/: CMakeLists.txt  Game.cpp  Game.hpp
server/game_engine/src/tools/: ATools.cpp  ATools.hpp  CMakeLists.txt  ITools.hpp
server/game_engine/src/tools/special/: Id.cpp  (+6 more)
server/lib/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  MultiThread.cpp  MultiThread.hpp  Mutex.cpp  Mutex.hpp  ScopedLock.cpp  ScopedLock.hpp  Thread.cpp  Thread.hpp  UUID.cpp  UUID.hpp
server/modules/: AbstractModule.cpp  AbstractModule.hpp  CMakeLists.txt  MultiThread.cpp  MultiThread.hpp  UUID.cpp  UUID.hpp
server/modules/gameModule/: CMakeLists.txt  gameModule.cpp  gameModule.hpp
server/modules/gameModule/game_engine/: CMakeLists.txt
server/modules/logModule/: CMakeLists.txt  logModule.cpp  logModule.hpp
server/modules/networkModule/: CMakeLists.txt  Client.cpp  Client.hpp  UDPError.hpp  UDPServer.cpp  networkModule.cpp  networkModule.hpp
server/room/: CMakeLists.txt
server/src/: CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  UDPServer.cpp  UDPServer.hpp  components.hpp  container_adaptor.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  gameModule.cpp  gameModule.hpp  indexed_zipper.hpp  indexed_zipper_iterator.hpp  main.cpp  networkModule.cpp  networkModule.hpp  readModule.cpp  readModule.hpp  registry.cpp  registry.hpp  sendModule.cpp  sendModule.hpp  serverModule.cpp  serverModule.hpp  sparse_array.hpp  system.cpp  system.hpp  zipper.hpp  zipper_iterator.hpp
server/src/entity/: ACharacter.cpp  ACharacter.hpp  AEntity.cpp  AEntity.hpp  Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  IEntity.hpp  Player.cpp  Player.hpp
server/src/entity/Bullet/: Bullet.cpp  Bullet.hpp
server/src/entity/bullet/: Bullet.cpp  Bullet.hpp
server/src/entity/character/: Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp
server/src/game/: Game.cpp  Game.hpp
server/src/tools/: ATools.cpp  ATools.hpp  ITools.hpp  Point.cpp  Point.hpp  Rect.cpp  Velocity.cpp  Velocity.hpp
server/src/tools/special/: Id.cpp  Id.hpp  Point.cpp  Point.hpp  Rect.hpp
server/src/tools/src/: Damage.hpp  Hp.hpp  Id.hpp  Level.hpp  Type.hpp  Velocity.hpp
server_dev_tools/: CMakeLists.txt  compile.bat  compile.sh
server_dev_tools/config/: modules.json
server_dev_tools/modules/: CMakeLists.txt
server_dev_tools/modules/adminPanelModule/: CMakeLists.txt  adminClient.cpp  adminClient.hpp  adminPanelModule.cpp  adminPanelModule.hpp
server_dev_tools/modules/template/: CMakeLists.txt  ModuleTemplate.cpp  ModuleTemplate.hpp
server_dev_tools/server/config/: MultiThread.hpp  modules.json
server_dev_tools/source_code/: AbstractModule.cpp  AbstractModule.hpp  CMakeLists.txt
tests/: CMakeLists.txt
tests/server/: CMakeLists.txt  testAbstractModule.cpp  testBuffer.cpp  testGameEngine.cpp  testGameEngine.hpp  testMultiThread.cpp  testMutex.cpp  testScopedLock.cpp  testThread.cpp
(+131 files in other folders)
